@@ -55,7 +55,7 @@ public abstract class AbstractPolygonShape extends Polygon implements IShape {
   /**
    * Creates a new abstract polygon shape.
    */
-  public AbstractPolygonShape() {
+  protected AbstractPolygonShape() {
     setLayoutManager(new GridLayout(2, false));
     setFill(true);
   }
@@ -63,8 +63,8 @@ public abstract class AbstractPolygonShape extends Polygon implements IShape {
   /*
    * (non-Javadoc)
    *
-   * @see org.preesm.graphiti.ui.figure.shapes.IShape#getConnectionAnchor(org.preesm.graphiti.ui.figure.
-   * VertexFigure, java.lang.String, boolean)
+   * @see org.preesm.graphiti.ui.figure.shapes.IShape#getConnectionAnchor(org.preesm.graphiti.ui.figure. VertexFigure,
+   * java.lang.String, boolean)
    */
   @Override
   public ConnectionAnchor getConnectionAnchor(final VertexFigure figure, final String portName,
@@ -80,8 +80,8 @@ public abstract class AbstractPolygonShape extends Polygon implements IShape {
   @Override
   public IShape newShape() {
     try {
-      return getClass().newInstance();
-    } catch (final InstantiationException | IllegalAccessException e) {
+      return getClass().getDeclaredConstructor().newInstance();
+    } catch (final ReflectiveOperationException e) {
       throw new GraphitiException("", e);
     }
   }
